test_resources/commit_952ce/test1.yr
mod test1;
use std::io;

fn main () {
    let a = 90 + 'r'; // error
    println (a); // should not try to call println with error
}
